Student app changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=StudentApp
+server.port=8081
+
+########################## app info ##############
+info.app.name=Student Application
+info.app.description=Spring Boot App for Student Management
+info.app.version=1.0.0
+
+
+########## spring actuator ###############
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.info.env.enabled=true
+
+################ spring security ############
+spring.security.user.name=sudheer
+spring.security.user.password=sudheer
+
+
