used custom placeholders in app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ info.app.name=Student Application
 info.app.description=Spring Boot App for Student Management
 info.app.version=1.0.0
 
+############ injecting custom values #########
+my.name=Sudheer, and im a software engineer..
+greet.the.person=Hello there!!!
+
 
 ########## spring actuator ###############
 management.endpoints.web.exposure.include=*
