added @qualifier changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=StudentApp
 server.port=8081
+server.servlet.context-path=/student-app
 
 ########################## app info ##############
 info.app.name=Student Application
