Jpa CRUD operations using Entitymanager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,22 @@ info.app.name=Student Application
 info.app.description=Spring Boot App for Student Management
 info.app.version=1.0.0
 
+#################### PostgreSQL Configuration #####################
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#################### JPA / Hibernate Config #######################
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#################### Add logging configs to display SQL statements ############
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+
 ############ injecting custom values #########
 my.name=Sudheer, and im a software engineer..
 greet.the.person=Hello there!!!
